// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IntegerInput /> accepts a value prop of type number 1`] = `
<input
  autoComplete="false"
  className="mui-mi-input-field"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter whole number"
  type="text"
  value="3"
/>
`;

exports[`<IntegerInput /> with a custom className 1`] = `
<input
  autoComplete="false"
  className="mui-mi-input-field custom-class"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter whole number"
  type="text"
  value=""
/>
`;

exports[`<IntegerInput /> with no props 1`] = `
<input
  autoComplete="false"
  className="mui-mi-input-field"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter whole number"
  type="text"
  value=""
/>
`;

exports[`Integer input with a decimal value 1`] = `
<input
  autoComplete="false"
  className="mui-mi-input-field mui-mi-input-field-has-error"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter whole number"
  type="text"
  value="3.24"
/>
`;

exports[`Integer input with a non integer value 1`] = `
<input
  autoComplete="false"
  className="mui-mi-input-field mui-mi-input-field-has-error"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter whole number"
  type="text"
  value="test"
/>
`;

exports[`Maximum value failed for integer input 1`] = `
<input
  autoComplete="false"
  className="mui-mi-input-field mui-mi-input-field-has-error"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter whole number"
  type="text"
  value="5"
/>
`;

exports[`Maximum value passed for integer input 1`] = `
<input
  autoComplete="false"
  className="mui-mi-input-field"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter whole number"
  type="text"
  value="5"
/>
`;

exports[`Minimum value failed for integer input 1`] = `
<input
  autoComplete="false"
  className="mui-mi-input-field mui-mi-input-field-has-error"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter whole number"
  type="text"
  value="5"
/>
`;

exports[`Minimum value passed for integer input 1`] = `
<input
  autoComplete="false"
  className="mui-mi-input-field"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter whole number"
  type="text"
  value="5"
/>
`;

exports[`New maximum value failed for integer input 1`] = `
<input
  autoComplete="false"
  className="mui-mi-input-field"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter whole number"
  type="text"
  value="5"
/>
`;

exports[`New minimum value failed for integer input 1`] = `
<input
  autoComplete="false"
  className="mui-mi-input-field"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter whole number"
  type="text"
  value="5"
/>
`;
